# quagga

./: .gitmodules  Makefile.am  bootstrap.sh  config.lt  configure.ac
i2rs/: .vimrc  .ycm_extra_conf.py  Makefile.am  i2rs  i2rs.c  i2rs.conf  i2rs.conf.sample  i2rs.h  i2rs3.c  i2rs_enp0s8.pcap  i2rs_main.c  i2rs_netconf.c  i2rs_old.c  i2rs_signals.c  i2rs_test.pcap  i2rs_zebra.c  ycm_extra_conf.py
i2rs/socket/: PassiveServer.c  PassiveServerInet.c  Socket.c  main.c  main_select.c
i2rs/tlpi-dist/: README
i2rs/tlpi-dist/acl/: acl_update  acl_view
i2rs/tlpi-dist/altio/: demo_sigio  epoll_flags_fork  epoll_input  multithread_epoll_wait  poll_pipes  select_mq  self_pipe  t_select
i2rs/tlpi-dist/cap/: cap_launcher  cap_text  check_password_caps  demo_file_caps
i2rs/tlpi-dist/daemons/: daemon_SIGHUP  t_syslog  test_become_daemon
i2rs/tlpi-dist/dirs_links/: bad_symlink  file_type_stats  list_files  list_files_readdir_r  nftw_dir_tree  t_dirbasename  t_unlink  view_symlink
i2rs/tlpi-dist/filebuff/: copy  direct_read  mix23_linebuff  mix23io  write_bytes  write_bytes_fdatasync  write_bytes_fsync  write_bytes_o_sync
i2rs/tlpi-dist/fileio/: atomic_append  bad_exclusive_open  copy  large_file  multi_descriptors  seek_io  t_readv  t_truncate
i2rs/tlpi-dist/filelock/: i_fcntl_locking  t_flock
i2rs/tlpi-dist/files/: chiflag  t_chown  t_stat  t_umask  t_utime  t_utimes
i2rs/tlpi-dist/filesys/: t_mount  t_statfs  t_statvfs  t_umount
i2rs/tlpi-dist/getopt/: t_getopt
i2rs/tlpi-dist/inotify/: demo_inotify  dnotify  inotify_dtree  rand_dtree
i2rs/tlpi-dist/loginacct/: dump_utmpx  utmpx_login  view_lastlog
i2rs/tlpi-dist/memalloc/: free_and_sbrk
i2rs/tlpi-dist/mmap/: anon_mmap  mmcat  mmcopy  t_mmap  t_remap_file_pages
i2rs/tlpi-dist/pgsjc/: catch_SIGHUP  disc_SIGHUP  handling_SIGTSTP  job_mon  orphaned_pgrp_SIGHUP  t_setsid
i2rs/tlpi-dist/pipes/: change_case  fifo_seqnum_client  fifo_seqnum_server  pipe_ls_wc  pipe_sync  popen_glob  simple_pipe
i2rs/tlpi-dist/pmsg/: mq_notify_sig  mq_notify_sigwaitinfo  mq_notify_thread  mq_notify_via_signal  mq_notify_via_thread  pmsg_create  pmsg_getattr  pmsg_receive  pmsg_send  pmsg_unlink
i2rs/tlpi-dist/proc/: bad_longjmp  display_env  longjmp  modify_env  necho  setjmp_vars  t_getenv
i2rs/tlpi-dist/proccred/: idshow
i2rs/tlpi-dist/procexec/: acct_on  acct_v3_view  acct_view  child_status  closeonexec  demo_clone  envargs  exit_handlers  footprint  fork_file_sharing  fork_sig_sync  fork_stdio_buf  fork_whos_on_first  make_zombie  multi_SIGCHLD  multi_wait  necho  orphan  t_clone  t_execl  t_execle  t_execlp  t_execve  t_fork  t_system  t_vfork  vfork_fd_test
i2rs/tlpi-dist/procpri/: demo_sched_fifo  sched_set  sched_view  t_sched_getaffinity  t_sched_setaffinity  t_setpriority
i2rs/tlpi-dist/procres/: rlimit_nproc  rusage  rusage_wait
i2rs/tlpi-dist/progconc/: syscall_speed
i2rs/tlpi-dist/psem/: psem_create  psem_getvalue  psem_post  psem_timedwait  psem_trywait  psem_unlink  psem_wait  thread_incr_psem
i2rs/tlpi-dist/pshm/: pshm_create  pshm_read  (+2 more)
(+133 files in other folders)
